2009-04-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.36

2009-04-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix for missing textures after restarting the wm.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_map_notify_real):
	  Fetch the texture unconditionally when the client is mapped.
	  Otherwise we fetch the texture on the first damage or when
	  the client changes fullscreenness, but in case of non-topmost
	  stackable windows neither of these may occurr, leaving the
	  texture unfetched.

2009-04-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-input.c
	(mb_wm_client_input_init): Check return value of
	mb_wm_managed_client_from_xwindow to shut up Coverity.
	* matchbox/theme-engines/mb-wm-theme.c (mb_wm_theme_new): Remove code
	marked with FIXME since the theme package seems to be OK now.
	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Comment out Thomas' fix for NB#101437 -- it requires toolkit changes
	before it works.

2009-04-29  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Fixed handling of _NET_WM_PID property.

	* matchbox/core/mb-wm-client-window.c:

2009-04-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Reliability fixes.  Do not freak out when the wm is restarted
	with a fullscreen application in front.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  When a fullscreen client is realized (mapped effectively)
	  do not create its frame not even if it's not undecorated
	  otherwise because then XRestackWindow() won't be able to
	  stack it properly (because the client window will be a child
	  of the frame, not the root window).
	* matchbox/core/mb-window-manager.c (stack_sync_to_display):
	  Missing XSync() added after XRestackWindows().

2009-04-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify):